--- a/nodejs/intro-nodejs-express/views/home.mustache
+++ b/nodejs/intro-nodejs-express/views/home.mustache
@@ -13,6 +13,14 @@
   <h1>Hello to my page</h1>
   <img src="images/image1.png" alt="Node-express">
 
+  <form method="post" action="/post">
+    <input type="text" name="name">
+    <input type="number" name="age">
+    <input type="password" name="password">
+
+    <input type="submit" value="SUBMIT">
+  </form>
+
 </body>
 
 </html>
